# myc

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README  config.example.toml  flake.nix
docs/: nix.md
migrations/: 0000_delivery_outbox_init.down.sql  0000_delivery_outbox_init.up.sql  0000_runtime_audit_init.down.sql  0000_runtime_audit_init.up.sql
scripts/: release-acceptance.sh
src/: audit.rs  audit_sqlite.rs  cli.rs  config.rs  control.rs  custody.rs  discovery.rs  error.rs  identity_files.rs  identity_storage.rs  lib.rs  logging.rs  main.rs  outbox.rs  outbox_sqlite.rs  paths.rs  persistence.rs  policy.rs  transport.rs
src/app/: backend.rs  mod.rs  runtime.rs
src/operability/: mod.rs  server.rs
src/transport/: nip46.rs
tests/: discovery_cli.rs  logging_run.rs  nip46_e2e.rs  operability_cli.rs  operability_e2e.rs  operability_server.rs  persistence_cli.rs
